# jira-time-tracker

./: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  overlay.rs
src/components/layout/: app-sidebar.tsx
src/components/ui/: button.tsx  card.tsx  combobox.tsx  dialog.tsx  hover-card.tsx  input-group.tsx  input.tsx  select.tsx  sidebar.tsx  tabs.tsx
src/features/onboarding/: CredentialsForm.tsx  api.ts  credentials.ts  useOnboarding.ts
src/features/timer/: ClassificationFields.tsx  DatePicker.tsx  DayTimeline.tsx  ManualTab.tsx  ProjectCombobox.tsx  RecordForm.tsx  RecordList.tsx  SyncDayButton.tsx  TimerTab.tsx  TodayHeading.tsx  TodayTimeline.tsx  TodayTotalBadge.tsx  active-timer.ts  cross-window.ts  db-client.ts  form-state.ts  format.ts  menu-bar.ts  projectColor.ts  records.ts  schema.ts  sync.ts  useActiveTimer.ts  useMenuBarTimer.ts  useRecords.ts
src/routes/: __root.tsx  _app.tsx  onboarding.tsx  overlay.tsx
src/routes/_app/: calendar.tsx  index.tsx  settings.tsx  user.tsx
src/shared/: api-error.ts  cache.ts
src/shared/credentials/: credentials.ts  useCredentials.ts
src/shared/db/: client.ts
src/shared/jira/: issues.ts
src/shared/projects/: api.ts  db.ts  schema.ts  sync.ts  useProjects.ts
src/shared/sync/: sync-meta.ts
src/shared/tags/: api.ts  db.ts  schema.ts  sync.ts  useTags.ts
src/shared/worklogs/: api.ts
