[package]
name = "Timely"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `macos-private-api` enables the transparent, frameless overlay panel window.
tauri = { version = "2.11.2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
# Summons the quick-entry overlay with a global shortcut (registered from Rust).
tauri-plugin-global-shortcut = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-store = "2.4.3"

# The overlay is a true non-activating NSPanel, so it floats over fullscreen apps
# without stealing focus. NSPanel is macOS-only, hence the target-scoped dep.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
